--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'mdbreact/dist/css/mdb.css';
+@import 'bootstrap/dist/css/bootstrap.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
